--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <h1 class="display-4">Hello, World!</h1>
     </div>
 
+    <footer>
+        <p>Footer Area</p>
+      </footer>
+
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
