Edit for the fam Hoda

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <footer>
         <p>Footer Area</p>
+        <p>Footer Area - Edit</p>
       </footer>
 
     <!----------------------------------------------->
