--- a/swipe.html
+++ b/swipe.html
@@ -23,41 +23,11 @@
     <!-------------------------------------->
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
-    <!-- Header Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Cineder</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">User Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Groups</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Matching</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <div class="container">
-        <h1 class="display-4">Hello, World!</h1>
+        <h1 class="display-4">Greetings weary traveller, and welcome to Cineder!</h1>
     </div>
 
-    <footer>
-        <p>Footer Area</p>
-        <p>Footer Area - Edit</p>
-      </footer>
 
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
