Added my second groups page, edited first groups page

--- a/groups.html
+++ b/groups.html
@@ -73,6 +73,7 @@
                 <p class="card-text">
                   This is a brief description of the users "The Boys" group. Maybe there are some inside jokes here!
                 </p>
+                <button type="button" class="btn btn-danger">Start Matching</button>
               </div>
             </div>
           </div>
@@ -85,6 +86,7 @@
                 This is a brief description of the users "Horror Fan Friends" group!
                 Maybe they include some spooky film quotes here.
             </p>
+            <button type="button" class="btn btn-danger">Start Matching</button>
           </div>
         </div>
       </div>
@@ -96,6 +98,7 @@
             <p class="card-text">
               This is a brief description of the users "Housemates" group. Maybe there are some inside jokes here!
             </p>
+            <button type="button" class="btn btn-danger">Start Matching</button>
           </div>
         </div>
       </div>
@@ -107,6 +110,7 @@
             <p class="card-text">
               This is a brief description of the users "Comedy Lovers" group. Maybe there  is a funny quote here.
             </p>
+            <button type="button" class="btn btn-danger">Start Matching</button>
           </div>
         </div>
       </div>
@@ -128,6 +132,7 @@
                     This is a brief description for the user's "Highschool Friends" group - 
                     this must be a great way to stay in touch.
                   </p>
+                  <button type="button" class="btn btn-danger">Start Matching</button>
                 </div>
               </div>
             </div>
@@ -139,10 +144,9 @@
               <p class="card-text">
                   This is a brief description of the users "Documentary Squad" group! It could include 
                   some information about the group members. Testing adding more text to this box to
-                  make it line up better? Hmmmm, it seems i would
-                  have to add a lot of text - there must be a better way to guarantee these cards are
-                  always the same size.
+                  make it line up better? 
               </p>
+              <button type="button" class="btn btn-danger">Start Matching</button>
             </div>
           </div>
         </div>
@@ -155,6 +159,7 @@
                 This is a group the user hasn't used in a while - they will be sorted 
                     based on recency of use.
               </p>
+              <button type="button" class="btn btn-danger">Start Matching</button>
             </div>
           </div>
         </div>
@@ -166,6 +171,7 @@
               <p class="card-text">
                 This is a brief description of the users "Family" group.
               </p>
+              <button type="button" class="btn btn-danger">Start Matching</button>
             </div>
           </div>
         </div>
