--- a/groups.html
+++ b/groups.html
@@ -57,7 +57,8 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <p></p>
+    <div class="container" style="border:1px solid grey; background-color: lightblue; border-radius: 5px; margin: auto;">
       <h1 class="display-6">Choose from your existing groups:</h1>
     </div>
     <div>
