--- a/profile_group.html
+++ b/profile_group.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">User Profile</a>
+                        <a class="nav-link active" aria-current="page" href="#">User Settings</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Groups</a>
@@ -42,58 +42,62 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Matching</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="row text-center">
-        <div class="col-md-14 mb-4">
-            <img class="rounded-circle" alt="100x100" src="./images/profile.jpg"
-                data-holder-rendered="true">
-        </div>
+    <div class="container">
+        <h1 class="display-7 ext-dark">Group info</h1>
     </div>
-    <div class="card text-center">
-        <div class="card-header">
-            Your Profile
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Name: Ameee1234</h5>
-            <p class="card-text">Movie is my life.</p>
-            <button type="button" class="btn btn-link">Edit Profile</button>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Group name</h5>
+                    <p class="card-text">Horror Fan Friends</p>
+                    <button type="button" class="btn btn-link">Edit group name</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-6">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Streaming Service</h5>
-              <p class="card-text">Netflix</p>
-              <p class="card-text">Amazon Prime</p>
-              <p class="card-text">Disney plus </p>
-              <button type="button" class="btn btn-link">Edit streaming service</button>
-            </div>
-          </div>
+            <h5 class="card-title">Group list</h5>
         </div>
+    </div>
+    <div class="d-md-flex">
+        <div class="overflow-auto p-3 mb-3 mb-md-0 mr-md-3 bg-light" style="max-width: 260px; max-height: 100px;">
+            <p>DAVE2357</p>
+            <p>Sagkj</p>
+            <p>Amme1234</p>
+            <p>UWEB</p>
+        </div>
+    </div>
+    </div>
+    <button type="button" class="btn btn-link">Edit group list</button>
+    <div class="row">
         <div class="col-sm-6">
-          <div class="card text-center">
-            <div class="card-body">
-              <h5 class="card-title">Genre</h5>
-              <p class="card-text">Anime</p>
-              <p class="card-text">Mystery</p>
-              <p class="card-text">Comedy</p>
-              <button type="button" class="btn btn-link">Edit Genre</button>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Streaming Service</h5>
+                    <p class="card-text">Amazon Prime</p>
+                    <button type="button" class="btn btn-link">Edit streaming service</button>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-
-    <footer>
-    </footer>
-
-    <!------------------Test Test Test---------------------------->
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Genre</h5>
+                    <p class="card-text">Horror</p>
+                    <button type="button" class="btn btn-link">Edit Genre</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
