--- a/swipe.html
+++ b/swipe.html
@@ -40,6 +40,7 @@
         .container {
             background-color: lightgrey;
         }
+        
 
     </style>
 
@@ -50,6 +51,38 @@
     <!-------------------------------------->
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
+
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Cineder</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Swipe</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Group Settings</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Matches</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     <div class="container" id="top_grid">
         <div class="row">
