--- a/swipe.html
+++ b/swipe.html
@@ -70,7 +70,7 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >Swipe</a
+                  >Swiping Page</a
                 >
               </li>
               <li class="nav-item">
@@ -100,7 +100,7 @@
 
     <div class="container" id="body_container">
         <br></br>
-        <h1 class="display-4">Greetings weary traveller, and welcome to Cineder!</h1>
+        <h1 class="display-4">Bless you weary traveller, and welcome to Cineder!</h1>
         <br></br>
         <br></br>
         <br></br>
@@ -115,7 +115,7 @@
             User Profile
           </div>
           <div class="col-sm">
-            Swiping
+            Swipe
           </div>
           <div class="col-sm">
             Groups
