--- a/swipe.html
+++ b/swipe.html
@@ -70,7 +70,7 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >Swipe</a
+                  >Swiping</a
                 >
               </li>
               <li class="nav-item">
