--- a/groups2.html
+++ b/groups2.html
@@ -19,14 +19,37 @@
     />
 
     <!-- Optional styles and scripts of your own -->
+    <style>
+      #inputBox{
+        text-align: center;
+        background-color: lightgray;
+      }
+
+      #searchBox{
+        width: 18rem;
+        text-align:center;
+        margin:auto;
+        background-color: lightgray;
+      }
+
+      .groupButtons{
+        color: whitesmoke;
+        background-color: #333333;
+      }
+
+      #inputParent{
+        padding:75px
+      }
+
+    </style>
   </head>
 
-  <body>
+  <body style="background-color: lightslategrey;">
     <!-------------------------------------->
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
     <!-- Header Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+<nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Cineder</a>
         <button
@@ -44,21 +67,21 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"
-                >User Settings</a
+                >Swiping Page</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Groups</a>
+              <a class="nav-link" href="#">Group Settings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Matching</a>
+              <a class="nav-link" href="#">Matches</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div style="padding:100px">
-        <div class="card" style="text-align: center; background-color: lightblue;">
+    <div id = "inputParent">
+        <div class="card" id = "inputBox">
             <div class="card-header">
               Have your friends send you their share link, then paste it here to join their group!
             </div>
@@ -66,21 +89,21 @@
               <h5 class="card-title">Paste your link in the box below:</h5>
               <div class="form-group">
                 <label for="exampleInputPassword1"></label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Your share link goes here">
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Your friend's code goes here">
               </div>
               <p></p>
               <p class="card-text">We can't wait to connect you with your friends!</p>
-              <a href="#" class="btn btn-primary">Join Group Now</a>
+              <a href="#" class="btn groupButtons">Join Group Now</a>
             </div>
           </div>
     </div>
     <div>
-    <div class="card" style="width: 18rem; text-align:center; margin:auto;">
+    <div class="card" id = "searchBox">
         <img class="card-img-top" src="./images/searchingScope.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Can't get a hold of your friend?</h5>
           <p class="card-text">Click here to search for a group and request access:</p>
-          <a href="#" class="btn btn-primary">Search Groups</a>
+          <a href="#" class="btn groupButtons">Search Groups</a>
         </div>
       </div>
     </div>
