added groups3.html, and updated all groups pages

--- a/groups.html
+++ b/groups.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My BCIT Project</title>
+    <title>User Groups</title>
     <meta name="comp1800 boilerplate code" content="my bcit project" />
     <meta name="author" content="BCIT" />
 
@@ -22,10 +22,10 @@
     <style>
       #topDescription{
         border:1px solid grey; 
-        background-color: #333333; 
+        background-color: lightgray; 
         border-radius: 5px; 
         margin: auto;
-        color: whitesmoke;
+        color: #333333;
         text-align: center;
       }
 
@@ -44,7 +44,7 @@
     </style>
   </head>
 
-  <body style="background-color: lightslategrey;">
+  <body style="background-color: #333333;">
     <!-------------------------------------->
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
