one small style change in groups3.html

--- a/groups3.html
+++ b/groups3.html
@@ -75,6 +75,10 @@
           margin:auto;
           padding: 2%;
       }
+
+      .boxFull{
+        background-color: lightgray;
+      }
     </style>
   </head>
 
@@ -134,7 +138,7 @@
         </div>
     </div>
     <div id="shareLinkBox">
-    <div class="card text-center">
+    <div class="card text-center boxFull">
         <div class="card-header">
           Invite Your Friends to Join!
         </div>
@@ -145,7 +149,6 @@
           <p><br></p>
           <a href="#" class="btn button">Start Matching With Your Group</a>
         </div>
-
       </div>
     <div>
     </div>
