--- a/profile_group.html
+++ b/profile_group.html
@@ -14,17 +14,60 @@
 
 
     <!-- Optional styles and scripts of your own -->
+    <style>
+        #topDescription {
+            border: 1px solid grey;
+            background-color: lightgray;
+            border-radius: 5px;
+            margin: auto;
+            color: #333333;
+            text-align: center;
+        }
 
+        .matchingButton {
+            color: whitesmoke;
+            background-color: #333333;
+        }
 
+        .groupBox {
+            background-color: lightgray;
+        }
+
+        .topMessage {
+            padding: 1%;
+        }
+
+        .card1 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 40%;
+        }
+
+        .card2 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 55%;
+           
+        }
+
+        .card3 {
+            margin-left: 40px;
+        }
+
+        .movieimg {
+            width: 17em;
+            height: 17em;
+        }
+    </style>
 </head>
 
-<body>
+<body style="background-color: #333333;">
 
     <!-------------------------------------->
     <!-- The following is HTML for layout -->
     <!-------------------------------------->
     <!-- Header Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Cineder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -34,69 +77,73 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">User Settings</a>
+                        <a class="nav-link active" aria-current="page" href="#">Swiping Page</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Groups</a>
+                        <a class="nav-link" href="#">Group Settings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Matching</a>
+                        <a class="nav-link" href="#">Matches</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <h1 class="display-7 ext-dark">Group info</h1>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Group name</h5>
-                    <p class="card-text">Horror Fan Friends</p>
-                    <button type="button" class="btn btn-link">Edit group name</button>
-                </div>
+
+    <div class="px-4 pt-0 pb-4 bg-dark"></div>
+    <div class="media align-items-end profile-header">
+        <div class="text-center">
+            <div class="rounded mx-auto d-block"><img src="./images/empty_cinema.jpg" alt="..." width="500"
+                    class="rounded mb-2 img-thumbnail"></div>
+            <div class="media-body mb-5 text-white">
+                <h4 class="mt-0 mb-0">The Boy</h4>
+                <p class="small mb-4"> <i class="fa fa-map-marker mr-2"></i>Vancouver</p>
+                <button type="button" class="btn matchingButton">Edit Group Profile</button>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <h5 class="card-title">Group list</h5>
+    </div>
+    <div class="groupBox p-4 d-flex justify-content-end text-center">
+        <ul class="list-inline mb-0">
+            <li class="list-inline-item">
+                <h5 class="font-weight-bold mb-0 d-block">5</h5><small class="text-muted"> <i
+                        class="fa fa-user-circle-o mr-1"></i>Members</small>
+            </li>
+        </ul>
+    </div>
+    <div class="card-dec text-center"></div>
+    <div class="container d-flex align-items-center justify-content-between mb-3"></div>
+    <h5 class="mb-0">Members</h5>
+    <div class="row card1">
+        <div class="card groupBox" style="width: 18rem; height: 18rem">
+            <h5 class="card-title">Members</h5>
+            <div class="card groupBox">
+                <p>DAVE2357</p>
+                <p>Sagkj</p>
+                <p>Amme1234</p>
+                <p>UWEB</p>
+            </div>
+            <button type="button" class="btn matchingButton">Edit Group List</button>
         </div>
-    </div>
-    <div class="d-md-flex">
-        <div class="overflow-auto p-3 mb-3 mb-md-0 mr-md-3 bg-light" style="max-width: 260px; max-height: 100px;">
-            <p>DAVE2357</p>
-            <p>Sagkj</p>
-            <p>Amme1234</p>
-            <p>UWEB</p>
+        <div class="card groupBox card3" style="width: 18rem;">
+            <h5 class="mb-0"> Streaming Service</h5>
+            <img class="card-img-top movieimg" src="./images/primevideo.jpeg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title mo">Prime Video</h5>
+                <a href="#" class="btn matchingButton">Edit Streaming Service</a>
+            </div>
         </div>
-    </div>
-    </div>
-    <button type="button" class="btn btn-link">Edit group list</button>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Streaming Service</h5>
-                    <p class="card-text">Amazon Prime</p>
-                    <button type="button" class="btn btn-link">Edit streaming service</button>
-                </div>
+        <div class="card groupBox card3" style="width: 18rem;">
+            <h5 class="mb-0"> Genre</h5>
+            <img class="card-img-top movieimg" src="./images/mystery.jpeg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title mo">Mystery</h5>
+                <a href="#" class="btn matchingButton">Edit Genre</a>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Genre</h5>
-                    <p class="card-text">Horror</p>
-                    <button type="button" class="btn btn-link">Edit Genre</button>
-                </div>
-            </div>
-        </div>
-    </div>
+        
+
     <!----------------------------------------------->
     <!-- JS: Boostrap, Firebase, API related    -->
     <!----------------------------------------------->
